syntax = "proto3";

package reservation;

import "teacher.proto";
import "student.proto";
import "availability.proto";

option java_multiple_files = true;


service ReservationService {
  rpc ValidateTeacher (teacher.TeacherRequest) returns (teacher.TeacherExistenceResponse);

  rpc ValidateStudent (student.StudentRequest) returns (student.StudentExistenceResponse);

  rpc ValidateSlotAvailability (availability.CheckSlotRequest) returns (availability.SlotAvailabilityResponse);

  rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse);

  rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);

  rpc UpdateReservation (UpdateReservationRequest) returns (UpdateReservationResponse);
}

message CreateReservationRequest {
  int64 teacher_id = 1;
  int64 student_id = 2;
  string date = 3;
  string start_time = 4;
  string end_time = 5;
  string status = 6;
  string note = 7;
}

message CreateReservationResponse {
  bool success = 1;
  string message = 2;
}

message DeleteReservationRequest {
  int64 reservation_id = 1;
}

message DeleteReservationResponse {
  bool success = 1;
}

message UpdateReservationRequest {
  int64 reservation_id = 1;
  string status = 2;
  string note = 3;
}

message UpdateReservationResponse {
  bool success = 1;
}
